# AxCore

./: .gitignore  CMakeLists.txt  README.md  aperiodic_manifold_experiment.py  build.bat  world_model_demo.py
.github/workflows/: prerelease.yml
include/axcore/: axcore.h  connectome.h  export.h  math.h  memory.h  types.h
src/: axcore.cpp  axcore_internal.h  connectome.cpp  math.cpp  memory.cpp
